<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2016-2017 Qualcomm Technologies, Inc.
 * All Rights Reserved.
 * Confidential and Proprietary - Qualcomm Technologies, Inc.
 */
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Call settings screen title -->
    <string name="call_settings">Call settings</string>
    <string name="call_settings_with_carrier">Settings (<xliff:g id="subscriptionlabel" example="Mock Carrier">%s</xliff:g>)</string>
    <string name="call_settings_admin_user_only">Call settings can only be changed by the admin user.</string>
    <!-- SIM settings screen title -->
    <string name="sim_settings">SIM settings</string>
    <string name="display_duration_title">Display duration</string>
    <string name="duration_enable_summary">Display duration is ON</string>
    <string name="duration_disable_summary">Display duration is OFF</string>
    <string name="speed_dial_settings_title">Speed dial settings</string>
    <string name="smart_forward_title">Smart Forward</string>
    <string name="smart_forward_summary">CFNRc Settings</string>
    <!-- Voicemail -->
    <string name="voicemail_title">Voicemail</string>
    <!-- FDN Settings -->
    <string name="fdn_title">Fixed Dialing Numbers</string>
    <!-- Phone Ringtone -->
    <string name="ringtone_title">Phone Ringtone</string>
    <!-- Notifications -->
    <string name="notification_title">Notifications</string>
    <!--Call Forwarding -->
    <string name="cf_title">Call Forwarding</string>
    <!-- IMS Settings-->
    <string name="ims_title">IMS Settings</string>
    <!--Additional Settings -->
    <string name = "additional_setting_title">Additional Settings</string>
    <string name="settings_label">Network settings</string>
    <string name="wifi_calling">Wi-Fi Calling</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="proximity_title">Turn on proximity sensor</string>
    <string name="proximity_on_summary">When you answer a call, the screen will be turned off to save power.</string>
    <string name="proximity_off_summary">When you answer a call, the screen will be turned on always.</string>
    <string name="vibration_title">Vibrating after connected</string>
    <string name="vibration_summary">Vibrate when answers</string>
    <string-array name="tty_mode_entries">
        <item>TTY Off</item>
        <item>TTY Full</item>
        <item>TTY HCO</item>
        <item>TTY VCO</item>
    </string-array>
    <!-- Do not translate. -->
    <string-array name="tty_mode_values" translatable="false">
        <!-- Do not translate. -->
        <item>0</item>
        <!-- Do not translate. -->
        <item>1</item>
        <!-- Do not translate. -->
        <item>2</item>
        <!-- Do not translate. -->
        <item>3</item>
    </string-array>
    <string name="ringtone_silent">None</string>
    <string name="ringtone_unknown">Unknown ringtone</string>
</resources>
