<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2016-2017 Qualcomm Technologies, Inc.
 * All Rights Reserved.
 * Confidential and Proprietary - Qualcomm Technologies, Inc.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/sim_settings">

    <PreferenceScreen
        android:key="voicemail_key"
        android:title="@string/voicemail_title">
    </PreferenceScreen>

    <PreferenceScreen
        android:key="fdn_key"
        android:title="@string/fdn_title">
    </PreferenceScreen>

    <com.qualcomm.qti.callsettings.QtiSubsRingtonePreference
        android:key="ringtone_preference_key"
        android:title="@string/ringtone_title"
        android:dialogTitle="@string/ringtone_title"
        android:persistent="false"
        android:ringtoneType="ringtone" />

   <PreferenceScreen
        android:key="call_forwarding_key"
        android:title="@string/cf_title">
   </PreferenceScreen>

   <PreferenceScreen
        android:key="additional_settings_key"
        android:title="@string/additional_setting_title">
   </PreferenceScreen>
</PreferenceScreen>
